// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Imported channel reducer handles actions handles setData 1`] = `
Object {
  "address": "address123",
  "keys": Object {
    "ivk": "zxviews1qwk53xxqqgqqpqrdhg8mw8xdprc9gd6lfpddgyaz9x5575cxeyk53efx02n0swpa3rhxms8zxvj62z2and8thzfe3qyl3k7qgpk45glak450zsyn70tq5z367nj972mzkutdxaclwd59jnsq0w8q59aks6rju9s2vgu7y9qcleq76pluemthwknl44c2anzj4zj0fpqufh6fezcfl8lppvxmzee3fg53gfhwyd0y735gxuhwhxn6q5eyvncye9fcldwzpf7twzjrnwgk6eumj",
  },
  "name": "general",
}
`;

exports[`Imported channel reducer handles actions handles setDecodingError 1`] = `[Error: this is a test error]`;

exports[`Imported channel reducer handles epics decodeChannel decodes uri 1`] = `undefined`;

exports[`Imported channel reducer handles epics decodeChannel sends notification on failure 1`] = `
Array [
  Object {
    "key": "",
    "message": "Invalid channel URI: Invalid channel hash: incorrect-uri",
    "options": Object {
      "action": [Function],
      "persist": false,
      "variant": "error",
    },
  },
]
`;

exports[`Imported channel reducer handles epics importChannel dispatches notification on failure 1`] = `
Array [
  Object {
    "key": "",
    "message": "Invalid channel URI: Cannot convert undefined or null to object",
    "options": Object {
      "action": [Function],
      "persist": false,
      "variant": "error",
    },
  },
  Object {
    "key": "",
    "message": "Cannot read property 'address' of undefined",
    "options": Object {
      "variant": "error",
    },
  },
]
`;

exports[`Imported channel reducer handles epics importChannel dispatches notification on success 1`] = `
Array [
  Object {
    "key": "",
    "message": "Invalid channel URI: Cannot convert undefined or null to object",
    "options": Object {
      "action": [Function],
      "persist": false,
      "variant": "error",
    },
  },
  Object {
    "key": "",
    "message": "Cannot read property 'address' of undefined",
    "options": Object {
      "variant": "error",
    },
  },
]
`;

exports[`Imported channel reducer handles epics importChannel reloads channels 1`] = `
Array [
  Object {
    "address": "ztestsapling1dfjv308amnk40s89trkvz646ne69553us0g858mmpgsw540efgftn4tf25gts2cttg3jgk9y8lx",
    "description": "This is a general channel available to all users of Zbay by default.",
    "id": "",
    "keys": Object {
      "ivk": "zivktestsapling1algnz2x84pqcnfdxrlntw73wpuqm3v568cepf5tuctyusm9javpqyjyzqy",
    },
    "name": "zbay",
    "private": true,
  },
]
`;
